# learning-llm-post-training-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/dataset/: alpaca.yaml  alpaca_local.yaml  preference.yaml  preference_local.yaml
configs/model/: 0.5b.yaml  1b_qlora.yaml  base.yaml  tinyllama.yaml  tinyllama_qlora.yaml
configs/stage/: dpo.yaml  dpo_m2.yaml  reward_model.yaml  reward_model_m2.yaml  sft.yaml  sft_m2.yaml
datasets/: alpaca_sample.json  preference_sample.jsonl
post_training_pipeline/: __init__.py  cli.py
post_training_pipeline/datasets/: __init__.py  loader.py  preprocessing.py
post_training_pipeline/evaluation/: __init__.py  harness.py  regression.py
post_training_pipeline/models/: __init__.py  loader.py
post_training_pipeline/pipelines/: __init__.py  base.py  dpo.py  reward_model.py  sft.py
post_training_pipeline/trainers/: __init__.py
post_training_pipeline/utils/: __init__.py  device.py  logging.py
scripts/: __init__.py  compare_models.py  prepare_dataset.py  run_training.py
tests/: conftest.py  test_config.py  test_datasets.py  test_evaluation.py  test_models.py  test_utils.py
